# Cpu-Scheduling-Visualizer

./: README.md  docker-compose.yml
Backend/: .gitignore  CMakeLists.txt  Dockerfile  main.cc
Backend/controllers/: AuthController.cc  AuthController.h  Simulator.cc  Simulator.h
Backend/filters/: JwtCookieFilter.cc  JwtCookieFilter.h
Backend/logic/: process.h
Backend/logic/Algorithms/: FCFS.cpp  HRRN.cpp  PSNP.cpp  PSP.cpp  RR.cpp  SJF.cpp  SRTF.cpp
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/app/: authSlice.js  store.js
frontend/src/components/: ComparisonTable.jsx  GanttChart.jsx  HistoryPanel.jsx  Navbar.jsx  ProcessForm.jsx  ProcessTable.jsx  ProtectRoute.jsx
frontend/src/components/home/: Banner.jsx  CallToAction.jsx  Feature.jsx  Footer.jsx  Hero.jsx
frontend/src/pages/: Auth.jsx  Dashboard.jsx  Home.jsx
